--- a/app/src/main/res/layout/employee_item.xml
+++ b/app/src/main/res/layout/employee_item.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text='@{detalle.employee_age}'/>
+            android:text='@{detalle.employee_age+""}'/>
     </LinearLayout>
 </LinearLayout>
 </layout>
