--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_setting">
+    app:startDestination="@+id/nav_list">
 
-    <fragment
-        android:id="@+id/nav_setting"
-        android:name="com.example.innovationtest.ui.home.DetailFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_detail" />
 
     <fragment
         android:id="@+id/nav_list"
